[gd_scene load_steps=5 format=3 uid="uid://b5dqpgdoeb6x"]

[ext_resource type="FontFile" uid="uid://b51e4e1htly8h" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="1_sgonx"]
[ext_resource type="Script" uid="uid://ukjb2jr8v4ik" path="res://Scripts/Buttons/Button_script.gd" id="2_c2apb"]
[ext_resource type="LabelSettings" uid="uid://cw355ejs16c6d" path="res://Assets/Fonts/label_settings.tres" id="3_ese4l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nfsqc"]

[node name="Button" type="Button"]
custom_minimum_size = Vector2(210, 45)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -22.5
offset_right = 105.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(105, 19.5)
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_sgonx")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_nfsqc")
flat = true
script = ExtResource("2_c2apb")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.5
offset_top = -10.0
offset_right = 259.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(260.379, 8.63953)
theme_override_font_sizes/font_size = 0
text = "TEXT"
label_settings = ExtResource("3_ese4l")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="focus_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
